# nutriref-api

./: .env.example  .gitignore  Dockerfile.mcp  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
app/: cache.py  config.py  discovery.py  errors.py  landing.py  main.py  middleware.py  normalize.py  schemas.py  services.py  usda.py
app/routes/: compare.py  detail.py  recipe.py  search.py
docs/: launch-drafts.md  submissions.md
docs/defects/: 01_search_control.txt  02_detail_paid.txt  03_compare_paid.txt  04_recipe_paid.txt  05_utf8_search.txt  06_utf8_detail.txt  07_utf8_compare.txt  08_utf8_recipe.txt  09_search_redis_ok.txt  10_detail_redis_ok.txt  11_compare_redis_ok.txt  12_recipe_redis_ok.txt  13_d3_redis_dies_midcall.txt  14_d4_mcp_happy.txt  15_d4_mcp_redis_down.txt  16_d1_paid_under_cp1252.txt  README.md
docs/promo/: base-devrel-pitch.md  demo-script.md  reddit-posts.md  show-hn.md  twitter-thread.md
examples/meal-planner/: README.md  plan_meal.py
mcp_server/: __init__.py  server.py
mcpb/: .mcpbignore  manifest.json  pyproject.toml
mcpb/server/: main.py
pypi/: README.md  pyproject.toml
scripts/: build-mcpb.sh  build-pypi.sh  get_cdp_address.py  pay_and_call.py  test_mcp_error_paths.py  test_mcp_stdio.py
tests/: conftest.py  fixtures.py  test_compare.py  test_detail.py  test_normalize.py  test_recipe.py  test_search.py
