[project]
name = "nutriref"
version = "0.1.0"
description = "Monetized USDA FoodData Central API for AI agents, gated by x402 micropayments"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Derek Hefley" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "fastapi-x402>=0.1.0",
    "cdp-sdk>=1.45.0",
    "x402[extensions]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "fakeredis>=2.23.0",
    "httpx>=0.27.0",
]
# Consumer-side only: for scripts/pay_and_call.py, not needed to run the server.
payer = [
    "x402>=2.10.0",
    "eth-account>=0.13.0",
]
# For running the MCP server wrapper (mcp_server/). Lets agents that speak MCP
# (Claude Desktop, Claude Code, etc.) consume NutriRef as native tools.
mcp = [
    "mcp>=1.0.0",
    "x402[evm]>=2.10.0",
    "eth-account>=0.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
