[project]
name = "nutriref-mcp"
version = "0.2.2"
description = "MCP server for NutriRef — pay-per-call USDA nutrition for AI agents (x402 + USDC on Base)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Derek Hefley" }]
keywords = ["mcp", "nutrition", "usda", "x402", "agents", "food", "fooddata-central"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "eth-account>=0.13.0",
    "x402[evm]>=2.10.0",
]

[project.urls]
Homepage = "https://nutriref.xyz"
Repository = "https://github.com/Younghef/nutriref-api"
Issues = "https://github.com/Younghef/nutriref-api/issues"

[project.scripts]
nutriref-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*"]
